Fixed issues with zoom animation on smaller screen sizes. Updated projects links, and copy

--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ html {
 .p-copy {
     font-size: 1rem;
     line-height: 1.5;
+    margin-bottom: 50px;
 }
 
 #skills {
@@ -205,6 +206,7 @@ html {
     background: #f5f5f5;
     transition: 0.6s ease-in-out;
     margin: 30px 10px;
+    text-decoration: none;
 }
 
 .btn-two:hover {
@@ -222,10 +224,6 @@ html {
     padding: 10vh 0px;
     text-align: center;
     font-weight: bold;
-}
-
-button:focus {
-    outline: none;
 }
 
 ::-webkit-scrollbar {
@@ -295,10 +293,6 @@ button:focus {
     font-size: 1em;
 }
 
-button:focus {
-    outline: none;
-}
-
 ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
@@ -359,12 +353,9 @@ button:focus {
 }
 
 /* Media queries */
-@media (max-width: 1265px) {
-    #heading {
-        width: 100%;
-    }
-
-    #middle  {
+@media (max-width: 1400px) {
+    #middle {
+        background-repeat: no-repeat;
         background-size: cover;
     }
 }
@@ -388,7 +379,7 @@ button:focus {
 
     #middle {
         width: 100%;
-        background-size: cover;
+
     }
 
     #tagline-container {
